🚫 Temporarily commented the demo timeline component
Will be recreated as a story

--- a/libs/timeline/temp-timeline/timeline.component.html
+++ b/libs/timeline/temp-timeline/timeline.component.html
@@ -1,4 +1,4 @@
-<svg 
+<!-- <svg 
      #timeline="timeline"
      bsTimeline
      class="timeline"
@@ -69,4 +69,4 @@
     ViewCenterX: {{ timeline.camera.viewCenterX.value }}<br/>
     ViewCenterY: {{ timeline.camera.viewCenterY.value }}<br/>
     Mouse     : {{x}}, {{y}}
-</div>
+</div> -->
