--- a/apps/tiket/src/app/modules/routes/routes-list/route-list.component.html
+++ b/apps/tiket/src/app/modules/routes/routes-list/route-list.component.html
@@ -1,22 +1,22 @@
-<div bsTimeline [zoom]="zoom" [date]="now" style="height: 100%; border: 1px solid black">
+<div bsTimeline [zoom]="zoom" [date]="now" style="height: 100%; border: 1px solid black" #timeline="timeline">
     <div *bsTimelineTick="'days'; minZoom: -100; maxZoom: 3300; dayFactor: 1; label: label; datesBetween: datesBetween; let tick;"
-         [style.width.px]="tick.width | async"
+         [style.width.px]="tick.width"
          [style.height.px]="15"
-         [style.transform]="'translateX(' + (tick.screenPositionX | async) + 'px)'"
+         [style.transform]="'translateX(' + (tick.screenPositionX) + 'px)'"
          style="position: absolute; border-left: 3px solid darkgray;">
         <label style="position: absolute; top: 5px; user-select: none; font-size: larger; font-weight: bold; color: green">
-            {{tick.label | async}}
+            {{tick.label}}
         </label>
     </div>
 
     <div *bsTimelineTick="'hours'; minZoom: -100; maxZoom: 3300; dayFactor: 1 / 24; label: labelH; datesBetween: datesBetweenH; let tick;"
-         [style.width.px]="tick.width | async"
+         [style.width.px]="tick.width"
          [style.height.px]="7"
-         [style.transform]="'translateX(' + (tick.screenPositionX | async) + 'px)'"
+         [style.transform]="'translateX(' + (tick.screenPositionX) + 'px)'"
          style="position: absolute; border-left: 3px solid lightgray;">
-        <label *ngIf="(tick.label | async) !== 0"
+        <label *ngIf="(tick.label) !== 0"
                style="position: absolute; left:5px; user-select: none">
-            {{tick.label | async}}
+            {{tick.label}}
         </label>
     </div>
 
@@ -44,12 +44,12 @@
              "
         >
             <div *ngFor="let checkpoint of tiket.checkpoints"
-                 [style.width.px]="checkpoint.executionTime * ((timeline?.camera?.sizeUnit | async) ?? 1) / 1000"
+                 [style.width.px]="checkpoint.executionTime * ((timeline.camera.sizeUnit | async) ?? 1) / 1000"
                  [style.top.px]="50 + index * (50 + 15 * 2)"
                  [style.left.px]="positionTicket(
                      checkpoint,
-                    (timeline?.camera?.dayWidth | async) ?? 0,
-                    timeline?.camera?.viewBounds | async
+                    (timeline.camera.dayWidth | async) ?? 0,
+                    timeline.camera.viewBounds | async
                  )
                  "
                  style="position: absolute;
