🚧 Implemented timeline components infrastructure

--- a/apps/tiket/src/app/modules/routes/routes-list/route-list.component.html
+++ b/apps/tiket/src/app/modules/routes/routes-list/route-list.component.html
@@ -1,55 +1,1 @@
-<div bsTimeline [zoom]="zoom" [date]="now" style="height: 100%; border: 1px solid black" #timeline="timeline">
-    <div *bsTimelineTick="'days'; minZoom: -100; maxZoom: 3300; dayFactor: 1; label: label; datesBetween: datesBetween; let tick;"
-         [style.width.px]="tick.width"
-         [style.height.px]="15"
-         [style.transform]="'translateX(' + (tick.screenPositionX) + 'px)'"
-         style="position: absolute; border-left: 3px solid darkgray;">
-        <label style="position: absolute; top: 5px; user-select: none; font-size: larger; font-weight: bold; color: green">
-            {{tick.label}}
-        </label>
-    </div>
-
-    <div *bsTimelineTick="'hours'; minZoom: -100; maxZoom: 3300; dayFactor: 1 / 24; label: labelH; datesBetween: datesBetweenH; let tick;"
-         [style.width.px]="tick.width"
-         [style.height.px]="7"
-         [style.transform]="'translateX(' + (tick.screenPositionX) + 'px)'"
-         style="position: absolute; border-left: 3px solid lightgray;">
-        <label *ngIf="(tick.label) !== 0"
-               style="position: absolute; left:5px; user-select: none">
-            {{tick.label}}
-        </label>
-    </div>
-
-    <ng-container *ngFor="let tiker of assignedTikets; let index = index">
-        <div [style.width.px]="50"
-            [style.height.px]="50"
-            [style.top.px]="(timeline.camera?.viewBounds | async)"
-            style="position: absolute;
-                padding: 15px;
-                box-shadow: black 1px 1px 1px;
-                text-align: center;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            "
-        >
-            {{ tiker.uid }}
-        </div>
-
-        <ng-container *ngFor="let tiket of tiker.assignedTikets">
-            <ng-container *ngFor="let checkpoint of tiket.checkpoints">
-                <div *bsTimelineItem="checkpoint.date; duration: checkpoint.executionTime; let left = screenPosition; let width = size;"
-                 [style.width.px]="width"
-                 [style.left.px]="left"
-                 [style.top.px]="50 + index * (50 + 15 * 2)"
-                 style="position: absolute;
-                        background-color: lightyellow;
-                        height: 50px;
-                       "
-                >
-                    {{checkpoint.type === 0 ? 'Job' : 'Warehouse'}}
-                </div>
-            </ng-container>
-        </ng-container>
-    </ng-container>
-</div>
+<tt-routes-timeline [assignedTikets]="assignedTikets"></tt-routes-timeline>
