--- a/apps/tiket/src/app/modules/routes/routes-list/routes-timeline/ticks/routes-timeline-ticks.component.scss
+++ b/apps/tiket/src/app/modules/routes/routes-list/routes-timeline/ticks/routes-timeline-ticks.component.scss
@@ -1,5 +1,7 @@
 .routes-timeline-tick {
-    position: absolute;
+    position         : absolute;
+    border-left-style: solid;
+    /* Other border-left properties are set by ngStyle */
 
     .routes-timeline-tick-label {
         position   : absolute;
