--- a/apps/tiket/src/app/modules/routes/routes-list/routes-timeline/tiker/routes-timeline-tiker.component.html
+++ b/apps/tiket/src/app/modules/routes/routes-list/routes-timeline/tiker/routes-timeline-tiker.component.html
@@ -1,1 +1,5 @@
-<p>routes-timeline-tiker works!</p>
+<div class="routes-timeline-tiker"
+     [ngStyle]="staticTikerStyle"
+>
+    {{ tiker.uid }}
+</div>
