--- a/apps/tiket/src/app/modules/routes/routes-list/routes-timeline/tiker/routes-timeline-tiker.component.scss
+++ b/apps/tiket/src/app/modules/routes/routes-list/routes-timeline/tiker/routes-timeline-tiker.component.scss
@@ -1,3 +1,8 @@
 .routes-timeline-tiker {
-    
+    position       : absolute;
+
+    display        : flex;
+    align-items    : center;
+    justify-content: center;
+    text-align     : center;
 }
