--- a/apps/tiket/src/app/modules/routes/routes-list/routes-timeline/tiker/routes-timeline-tiker.component.html
+++ b/apps/tiket/src/app/modules/routes/routes-list/routes-timeline/tiker/routes-timeline-tiker.component.html
@@ -1,5 +1,5 @@
 <div class="routes-timeline-tiker"
-     [ngStyle]="staticTikerStyle"
+     [ngStyle]="tikerStyle()"
 >
     {{ tiker.uid }}
 </div>
