--- a/apps/tiket/src/app/modules/routes/routes-list/routes-timeline/tiket-checkpoint/routes-timeline-tiket-checkpoint.component.scss
+++ b/apps/tiket/src/app/modules/routes/routes-list/routes-timeline/tiket-checkpoint/routes-timeline-tiket-checkpoint.component.scss
@@ -1,5 +1,5 @@
 .routes-timeline-tiket-checkpoint {
     position: absolute;
 
-    background-color: lightyellow;
+    background-color: chocolate;
 }
