➕ Enabled optional item date and duration

--- a/apps/tiket/src/app/modules/routes/routes-list/routes-timeline/tiker/routes-timeline-tiker.component.html
+++ b/apps/tiket/src/app/modules/routes/routes-list/routes-timeline/tiker/routes-timeline-tiker.component.html
@@ -1,5 +1,6 @@
-<div class="routes-timeline-tiker"
-     [ngStyle]="tikerStyle()"
+<div *bsTimelineItem="let viewBounds = viewBounds"
+     class="routes-timeline-tiker"
+     [ngStyle]="tikerStyle(viewBounds)"
 >
     {{ tiker.uid }}
 </div>
