--- a/apps/tiket/src/app/modules/routes/routes-list/routes-timeline/tiket-checkpoint/routes-timeline-tiket-checkpoint.component.html
+++ b/apps/tiket/src/app/modules/routes/routes-list/routes-timeline/tiket-checkpoint/routes-timeline-tiket-checkpoint.component.html
@@ -1,6 +1,6 @@
-<div *bsTimelineItem="checkpoint.date; duration: checkpoint.executionTime; let left = screenPosition; let width = size;"
+<div *bsTimelineItem="checkpoint.date; duration: checkpoint.executionTime; let left = screenPosition; let width = size; let viewBounds = viewBounds"
      [style.width.px]="width"
-     [ngStyle]="checkpointStyle(left)"
+     [ngStyle]="checkpointStyle(left, viewBounds)"
      class="routes-timeline-tiket-checkpoint"
 >
     {{checkpoint.type === 0 ? 'Job' : 'Warehouse'}}
