--- a/apps/tiket/src/app/app.component.html
+++ b/apps/tiket/src/app/app.component.html
@@ -1,1 +1,12 @@
+<div height="10vh" width="100vw">
+    s<br/>
+    s<br/>
+    s<br/>
+    s<br/>
+    s<br/>
+    s<br/>
+    s<br/>
+    s
+</div>
+
 <tt-main-layout></tt-main-layout>
